Changes:

Release 1.6 -- in development (compared to 1.5)
-----------------------------------------------
Language, standard libary, and compiler changes (for shader writers):
* The "gabor" varieties of noise were found to have a serious mathematical
  bug, which after fixing results in a change to the pattern. We are hoping
  that they were rarely used, but beware a change in appearance. (1.6.1)

API changes, new options, new ShadingSystem features (for renderer writers):
* New ShadingSystem attribute int "profile", if set to 1, will include
  in the runtime statistics output a measure of how much total time was
  spent executing shaders, as well as the identities and times of the 5
  shader groups that spent the most time executing.  Note that this
  option is 0 (off) by default, since turning it on can add
  significantly to total runtime for some scenes.  #418 (1.6.2)
* New per-ShaderGroup attributes:
   * You can retrieve information about all closures that an optimized group
     might create using new queries "num_closures_needed", "closures_needed",
     "unknown_closures_needed". This could be useful for renderers by, for
     example, noticing that a material can't possibly call the "transparent"
     closure, and thus concluding that it must be opaque everywhere and thus
     shadow rays need not execute shaders to determine opacity. (#400) (1.6.0)
   * You can retrieve information about all "globals" (P, N, etc.) that an
     optimized group needs using new queries "num_globals_needed" and
     "globals_needed". This could be useful for renderers for which
     computing those globals is very expensive; examining which are truly
     needed and only computing those. (#401) (1.6.0)

Performance improvements:
* Many noise() varieties have been sped up significantly on
  architectures with SIMD vector instructions (such as SSE). We're
  seeing 2x-3x improvement for noise(point), depending on the specific