@@ -1,0 +1,3 @@
+#!/usr/bin/env python 
+
+command = oslinfo("-v metadata")
